2009-03-09  Gabriel Burt  <gabriel.burt@gmail.com>
	* docs/Makefile.am: Reduce the verbosity of docs build output.


svn path=/trunk/taglib-sharp/; revision=128937

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -22,7 +22,7 @@ en/index.xml: $(ASSEMBLY) $(SLASHDOC) XmlInjector.exe Package.en.xml
 	if [ -d en ]; then \
 		rm -rf en; \
 	fi
-	$(DOC_UPDATER) -assembly:$(ASSEMBLY) -importslashdoc:$(SLASHDOC) -path:en
+	$(DOC_UPDATER) -assembly:$(ASSEMBLY) -importslashdoc:$(SLASHDOC) -path:en > /dev/null
 	$(MONO) XmlInjector.exe Package.en.xml InsertMissingValues
 
 update-html: en
