2009-03-18  Gabriel Burt  <gabriel.burt@gmail.com>
	* tests/Makefile.am:
	* examples/Makefile.am: Patch from Bertrand Lorentz fixing issue with
	random files slipping into the tarball/dist (BGO #575302).  make distcheck
	and running ./configure && make && make test work on the tarball


svn path=/trunk/taglib-sharp/; revision=129762

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -29,7 +29,9 @@ $(LIST_TYPES).exe: $(LIST_TYPES).cs
 $(BATCH_SET).exe: $(BATCH_SET).cs
 	$(MCS) -out:$@ -debug $(REFERENCES) $<
 
-EXTRA_DIST = $(READ_FROM_URI).cs $(SET_PICTURES).cs $(LIST_TYPES).cs $(BATCH_SET).cs
+EXTRA_DIST = $(READ_FROM_URI).cs $(SET_PICTURES).cs $(LIST_TYPES).cs $(BATCH_SET).cs \
+	$(srcdir)/covers/sample*
+
 DISTCLEANFILES = *.pidb
 CLEANFILES = *.dll *.exe *.mdb
 MAINTAINERCLEANFILES = Makefile.in
