2009-05-14  Gabriel Burt  <gabriel.burt@gmail.com>
	* src/TagLib/Aiff/File.cs:
	* src/TagLib/Aiff/StreamHeader.cs:
	* src/TagLib/FileTypes.cs:
	* src/TagLib/TagLib.sources:
	* src/taglib-sharp.mdp:
	* docs/Package.en.xml.in:
	* tests/tests.mdp:
	* tests/fixtures/TagLib.Tests.FileFormats/AiffFormatTest.cs:
	* tests/Makefile.am:
	* taglib-sharp.csproj: Patch from Helmut Wahrmann adding support for the
	AIFF file format (BGO #579261)

svn path=/trunk/taglib-sharp/; revision=134161

--- a/docs/Package.en.xml.in
+++ b/docs/Package.en.xml.in
@@ -17,10 +17,19 @@
 			cref="T:TagLib.File" />.</remarks>
 		</Docs>
 	</Namespace>
+	<Namespace Name="TagLib.Aiff">
+		<Docs>
+			<summary><para>The TagLib.Aiff namespace contains classes
+			for handling the AIFF file format.</para></summary>
+			<remarks><para>See
+			http://en.wikipedia.org/wiki/Audio_Interchange_File_Format for
+			the complete specification.</para></remarks>
+		</Docs>
+	</Namespace>
 	<Namespace Name="TagLib.Ape">
 		<Docs>
 			<summary><para>The TagLib.Ape namespace contains classes
-			for handling the reading APE tags.</para></summary>
+			for reading APE tags.</para></summary>
 			<remarks><para>See
 			http://wiki.hydrogenaudio.org/index.php?title=APEv2 for
 			the complete specification.</para></remarks>
@@ -153,6 +162,9 @@
 		</File>
 		<File Path="en/ns-TagLib.xml">
 			<Replace Source="/Package/Namespace[@Name='TagLib']/Docs" Target="/Namespace/Docs" />
+		</File>
+		<File Path="en/ns-TagLib.Aiff.xml">
+			<Replace Source="/Package/Namespace[@Name='TagLib.Aiff']/Docs" Target="/Namespace/Docs" />
 		</File>
 		<File Path="en/ns-TagLib.Ape.xml">
 			<Replace Source="/Package/Namespace[@Name='TagLib.Ape']/Docs" Target="/Namespace/Docs" />
