2009-05-15  Gabriel Burt  <gabriel.burt@gmail.com>
	* src/TagLib/Riff/File.cs:
	* src/TagLib/FileTypes.cs:
	* src/TagLib/Aac/File.cs:
	* src/TagLib/Aac/AudioHeader.cs:
	* src/TagLib/Aac/BitStream.cs:
	* src/TagLib/TagLib.sources:
	* src/taglib-sharp.mdp:
	* docs/Package.en.xml.in:
	* tests/tests.mdp:
	* tests/fixtures/TagLib.Tests.FileFormats/AacFormatTest.cs:
	* tests/Makefile.am:
	* taglib-sharp.csproj: Patch from Patrick Dehne adding support for ADTS AAC
	files (BGO #580553)

svn path=/trunk/taglib-sharp/; revision=134211

--- a/docs/Package.en.xml.in
+++ b/docs/Package.en.xml.in
@@ -17,6 +17,15 @@
 			cref="T:TagLib.File" />.</remarks>
 		</Docs>
 	</Namespace>
+	<Namespace Name="TagLib.Aac">
+		<Docs>
+			<summary><para>The TagLib.Aac namespace contains classes
+			for handling the AAC file format.</para></summary>
+			<remarks><para>See
+            http://www.hydrogenaudio.org/forums/lofiversion/index.php/t21617.html
+			for the complete specification.</para></remarks>
+		</Docs>
+	</Namespace>
 	<Namespace Name="TagLib.Aiff">
 		<Docs>
 			<summary><para>The TagLib.Aiff namespace contains classes
@@ -162,6 +171,9 @@
 		</File>
 		<File Path="en/ns-TagLib.xml">
 			<Replace Source="/Package/Namespace[@Name='TagLib']/Docs" Target="/Namespace/Docs" />
+		</File>
+		<File Path="en/ns-TagLib.Aac.xml">
+			<Replace Source="/Package/Namespace[@Name='TagLib.Aac']/Docs" Target="/Namespace/Docs" />
 		</File>
 		<File Path="en/ns-TagLib.Aiff.xml">
 			<Replace Source="/Package/Namespace[@Name='TagLib.Aiff']/Docs" Target="/Namespace/Docs" />
