2009-10-11  Ruben Vermeersch  <ruben@savanne.be>
	* src/TagLib/FileTypes.cs:
	* src/TagLib/TagLib.sources:
	* src/TagLib/Tiff/Codec.cs:
	* src/TagLib/Tiff/File.cs:
	* src/TagLib/Tiff/TiffTag.cs:
	Support for TIFF decoding.

	* src/TagLib/IFD/Entries/ByteVectorIFDEntry.cs:
	* src/TagLib/IFD/Entries/LongArrayIFDEntry.cs:
	* src/TagLib/IFD/Entries/LongIFDEntry.cs:
	* src/TagLib/IFD/Entries/RationalIFDEntry.cs:
	* src/TagLib/IFD/Entries/SRationalIFDEntry.cs:
	* src/TagLib/IFD/Entries/ShortArrayIFDEntry.cs:
	* src/TagLib/IFD/Entries/ShortIFDEntry.cs:
	* src/TagLib/IFD/Entries/StringIFDEntry.cs:
	* src/TagLib/IFD/Entries/SubIFDEntry.cs:
	* src/TagLib/IFD/Entries/UndefinedIFDEntry.cs:
	* src/TagLib/IFD/IFDEntry.cs:
	* src/TagLib/IFD/IFDEntryTag.cs:
	* src/TagLib/IFD/IFDTag.cs:
	TIFF IFD support. This is the metadata encoding structure in TIFF, which is
	also used in other formats such as EXIF and multiple RAW formats. Hence the
	separate namespace.

	* tests/Makefile.am:
	* tests/fixtures/TagLib.Tests.FileFormats/TiffFormatTest.cs:
	* tests/samples/sample.tiff:
	Add tests for TIFF reading.

	Patch written by:
		Ruben Vermeersch <ruben@savanne.be>
		Mike Gemünde <mike@gemuende.de>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -21,6 +21,7 @@ ASSEMBLY_CSFILES =  \
 	fixtures/TagLib.Tests.FileFormats/M4aFormatTest.cs \
 	fixtures/TagLib.Tests.FileFormats/MpcFormatTest.cs \
 	fixtures/TagLib.Tests.FileFormats/OggFormatTest.cs \
+	fixtures/TagLib.Tests.FileFormats/TiffFormatTest.cs \
 	fixtures/TagLib.Tests.FileFormats/StandardTests.cs \
 	fixtures/TagLib.Tests.Performance/PerformanceTest.cs \
 	fixtures/TagLib.Tests.TaggingFormats/ApeTest.cs \
