Extend UserComment handling for undefined data
We can now handle undefined entries in the UserComment field. Since the program
CanonZoomBrowser decides to not fill the 8 byte correctly for an undefined entry,
we have to be more liberal for parsing it.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -19,6 +19,7 @@ ASSEMBLY_CSFILES =  \
 	fixtures/TagLib.Tests.FileFormats/Id3V24FormatTest.cs \
 	fixtures/TagLib.Tests.FileFormats/Id3V2FormatTest.cs \
 	fixtures/TagLib.Tests.FileFormats/IFormatTest.cs \
+	fixtures/TagLib.Tests.FileFormats/JpegCanonFormatTest.cs \
 	fixtures/TagLib.Tests.FileFormats/JpegFormatTest.cs \
 	fixtures/TagLib.Tests.FileFormats/JpegAddMetadataTest.cs \
 	fixtures/TagLib.Tests.FileFormats/M4aFormatTest.cs \
