--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -2,9 +2,10 @@ READ_FROM_URI = ReadFromUri
 SET_PICTURES = SetPictures
 LIST_TYPES = ListSupportedMimeTypes
 BATCH_SET = BatchSet
+PARSE_PHOTO = ParsePhoto
 
 REFERENCES = -r:taglib-sharp.dll
-EXAMPLES_BUILD = taglib-sharp.dll $(SET_PICTURES).exe $(LIST_TYPES).exe $(BATCH_SET).exe
+EXAMPLES_BUILD = taglib-sharp.dll $(SET_PICTURES).exe $(LIST_TYPES).exe $(BATCH_SET).exe $(PARSE_PHOTO).exe
 
 if HAVE_GNOME_SHARP
 EXAMPLES_BUILD += $(READ_FROM_URI).exe
@@ -29,7 +30,10 @@ $(LIST_TYPES).exe: $(LIST_TYPES).cs
 $(BATCH_SET).exe: $(BATCH_SET).cs
 	$(MCS) -out:$@ -debug $(REFERENCES) $<
 
-EXTRA_DIST = $(READ_FROM_URI).cs $(SET_PICTURES).cs $(LIST_TYPES).cs $(BATCH_SET).cs \
+$(PARSE_PHOTO).exe: $(PARSE_PHOTO).cs
+	$(MCS) -out:$@ -debug $(REFERENCES) $<
+
+EXTRA_DIST = $(READ_FROM_URI).cs $(SET_PICTURES).cs $(LIST_TYPES).cs $(BATCH_SET).cs $(PARSE_PHOTO).cs \
 	$(srcdir)/covers/sample*
 
 DISTCLEANFILES = *.pidb
