--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -39,6 +39,7 @@ ASSEMBLY_CSFILES =  \
 	fixtures/TagLib.Tests.Images/Utils.cs \
 	fixtures/TagLib.Tests.Images/XapTest.cs \
 	fixtures/TagLib.Tests.Images/XmpCrashTest.cs \
+	fixtures/TagLib.Tests.Images/XmpSpecTest.cs \
 	fixtures/TagLib.Tests.Performance/PerformanceTest.cs \
 	fixtures/TagLib.Tests.TaggingFormats/ApeTest.cs \
 	fixtures/TagLib.Tests.TaggingFormats/AsfTest.cs \
