Fix File.RFind partly and add a test
RFind is fixed to do not crash when file size is smaller than the read buffer.
A test is added to take care about RFind and Find methods of the class File.
However, there is still an issue with matches spread above different buffer
reads.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -7,6 +7,7 @@ ASSEMBLY_CSFILES =  \
 	fixtures/Helpers.cs \
 	fixtures/TagLib.Tests.Collections/ByteVectorCollectionTest.cs \
 	fixtures/TagLib.Tests.Collections/ByteVectorTest.cs \
+	fixtures/TagLib.Tests.Collections/FileTest.cs \
 	fixtures/TagLib.Tests.Collections/StringCollectionTest.cs \
 	fixtures/TagLib.Tests.FileFormats/AacFormatTest.cs \
 	fixtures/TagLib.Tests.FileFormats/AiffFormatTest.cs \
