--- a/taglib-sharp.csproj
+++ b/taglib-sharp.csproj
@@ -44,6 +44,8 @@
     <Optimize>false</Optimize>
     <WarningLevel>4</WarningLevel>
     <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
+    <OutputPath>src</OutputPath>
+    <GenerateDocumentation>true</GenerateDocumentation>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
@@ -54,6 +56,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="src\AssemblyInfo.cs" />
@@ -227,42 +230,11 @@
     <Compile Include="src\TagLib\Xmp\XmpNode.cs" />
     <Compile Include="src\TagLib\Xmp\XmpNodeVisitor.cs" />
     <Compile Include="src\TagLib\Xmp\XmpTag.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.Collections\ByteVectorCollectionTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.Collections\ByteVectorTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.Collections\StringCollectionTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.FileFormats\AacFormatTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.FileFormats\AiffFormatTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.FileFormats\AsfFormatTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.FileFormats\AviFormatTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.FileFormats\FlacFormatTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.FileFormats\Id3BothFormatTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.FileFormats\Id3V1FormatTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.FileFormats\Id3V2FormatTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.FileFormats\IFormatTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.FileFormats\JpegFormatTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.FileFormats\M4aFormatTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.FileFormats\MpcFormatTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.FileFormats\OggFormatTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.FileFormats\StandardTests.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.FileFormats\TiffFormatTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.Images\AddImageMetadataTests.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.Images\JpegCanonZoombrowserTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.Images\JpegEmptyTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.Images\JpegPanasonicTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.Images\Utils.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.Images\XmpCrashTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.Performance\PerformanceTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.TaggingFormats\ApeTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.TaggingFormats\AsfTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.TaggingFormats\DivXTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.TaggingFormats\Id3V1Test.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.TaggingFormats\Id3V2Test.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.TaggingFormats\InfoTagTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.TaggingFormats\MovieIdTagTest.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.TaggingFormats\Mpeg4Test.cs" />
-    <Compile Include="tests\fixtures\TagLib.Tests.TaggingFormats\XiphTest.cs" />
-    <Compile Include="tests\fixtures\Helpers.cs" />
-    <Compile Include="tests\AssemblyInfo.cs" />
+    <Compile Include="src\TagLib\Xmp\XmpNodeType.cs" />
+    <Compile Include="src\TagLib\IFD\Entries\SLongArrayIFDEntry.cs" />
+    <Compile Include="src\TagLib\IFD\Entries\SShortArrayIFDEntry.cs" />
+    <Compile Include="src\TagLib\IFD\Entries\SShortIFDEntry.cs" />
+    <Compile Include="src\TagLib\Jpeg\Table.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="src\" />
@@ -280,65 +252,19 @@
     <Folder Include="src\TagLib\" />
     <Folder Include="src\TagLib\Ogg\" />
     <Folder Include="src\TagLib\" />
-    <Content Include="taglib-sharp.snk" />
   </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <None Include="tests\samples\corrupt\a.aac" />
-    <None Include="tests\samples\corrupt\a.aif" />
-    <None Include="tests\samples\corrupt\a.ape" />
-    <None Include="tests\samples\corrupt\a.flac" />
-    <None Include="tests\samples\corrupt\a.m4a" />
-    <None Include="tests\samples\corrupt\a.mp3" />
-    <None Include="tests\samples\corrupt\a.mpc" />
-    <None Include="tests\samples\corrupt\a.ogg" />
-    <None Include="tests\samples\corrupt\a.wma" />
-    <None Include="tests\samples\corrupt\null_title_v2.mp3" />
-    <None Include="tests\samples\unsupported\sample.it" />
-    <None Include="tests\samples\unsupported\sample.mod" />
-    <None Include="tests\samples\unsupported\sample.s3m" />
-    <None Include="tests\samples\unsupported\sample.xm" />
-    <None Include="tests\samples\LICENSE" />
-    <None Include="tests\samples\sample.aac" />
-    <None Include="tests\samples\sample.aif" />
-    <None Include="tests\samples\sample.ape" />
-    <None Include="tests\samples\sample.avi" />
-    <None Include="tests\samples\sample.flac" />
-    <None Include="tests\samples\sample.jpg" />
-    <None Include="tests\samples\sample.m4a" />
-    <None Include="tests\samples\sample.mpc" />
-    <None Include="tests\samples\sample.ogg" />
-    <None Include="tests\samples\sample.tiff" />
-    <None Include="tests\samples\sample.wma" />
-    <None Include="tests\samples\sample_both.mp3" />
-    <None Include="tests\samples\sample_canon_zoombrowser.jpg" />
-    <None Include="tests\samples\sample_no_metadata.jpg" />
-    <None Include="tests\samples\sample_panasonic.jpg" />
-    <None Include="tests\samples\sample_v1_only.mp3" />
-    <None Include="tests\samples\sample_v2_only.mp3" />
-    <None Include="tests\samples\sample_xmpcrash.jpg" />
-    <None Include="tests\samples\tmpwrite.aac" />
-    <None Include="tests\samples\tmpwrite.aif" />
-    <None Include="tests\samples\tmpwrite.avi" />
-    <None Include="tests\samples\tmpwrite.flac" />
-    <None Include="tests\samples\tmpwrite.m4a" />
-    <None Include="tests\samples\tmpwrite.mpc" />
-    <None Include="tests\samples\tmpwrite.ogg" />
-    <None Include="tests\samples\tmpwrite.wma" />
-    <None Include="tests\samples\tmpwrite_both.mp3" />
-    <None Include="tests\samples\tmpwrite_canon_zoombrowser.jpg" />
-    <None Include="tests\samples\tmpwrite_no_metadata.jpg" />
-    <None Include="tests\samples\tmpwrite_panasonic.jpg" />
-    <None Include="tests\samples\tmpwrite_v1_only.mp3" />
-    <None Include="tests\samples\tmpwrite_v2_only.mp3" />
-    <None Include="tests\samples\vector.bin" />
-    <None Include="tests\C:\NUnitPrimaryTrace.txt" />
-    <None Include="tests\Makefile" />
-    <None Include="tests\Makefile.am" />
-    <None Include="tests\Makefile.in" />
-    <None Include="tests\TestResult.xml" />
-    <None Include="tests\tests.dll" />
-    <None Include="tests\tests.dll.mdb" />
-    <None Include="tests\tests.mdp" />
+    <None Include="AUTHORS">
+      <Visible>False</Visible>
+    </None>
+    <None Include="COPYING">
+      <Visible>False</Visible>
+    </None>
   </ItemGroup>
+  <ProjectExtensions>
+    <MonoDevelop>
+      <Properties InternalTargetFrameworkVersion="3.5" />
+    </MonoDevelop>
+  </ProjectExtensions>
 </Project>
