--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -4,12 +4,14 @@ LIST_TYPES = ListSupportedMimeTypes
 BATCH_SET = BatchSet
 PARSE_PHOTO = ParsePhoto
 STRIP_IMAGE = StripImageData
+GENERATE_TEST_FIXTURE = GenerateTestFixture
 
 REFERENCES = -r:taglib-sharp.dll
 EXAMPLES_BUILD = taglib-sharp.dll $(SET_PICTURES).exe $(LIST_TYPES).exe $(BATCH_SET).exe $(PARSE_PHOTO).exe $(STRIP_IMAGE).exe
 
 if HAVE_GNOME_SHARP
 EXAMPLES_BUILD += $(READ_FROM_URI).exe
+EXAMPLES_BUILD += $(GENERATE_TEST_FIXTURE).exe
 endif
 
 all: $(EXAMPLES_BUILD)
@@ -19,6 +21,9 @@ taglib-sharp.dll:
 
 if HAVE_GNOME_SHARP
 $(READ_FROM_URI).exe: $(READ_FROM_URI).cs
+	$(MCS) -out:$@ -debug $(REFERENCES) $(GNOME_SHARP_LIBS) $<
+
+$(GENERATE_TEST_FIXTURE).exe: $(GENERATE_TEST_FIXTURE).cs
 	$(MCS) -out:$@ -debug $(REFERENCES) $(GNOME_SHARP_LIBS) $<
 endif
 
@@ -37,7 +42,7 @@ $(PARSE_PHOTO).exe: $(PARSE_PHOTO).cs
 $(STRIP_IMAGE).exe: $(STRIP_IMAGE).cs
 	$(MCS) -out:$@ -debug $(REFERENCES) $<
 
-EXTRA_DIST = $(READ_FROM_URI).cs $(SET_PICTURES).cs $(LIST_TYPES).cs $(BATCH_SET).cs $(PARSE_PHOTO).cs $(STRIP_IMAGE).cs \
+EXTRA_DIST = $(READ_FROM_URI).cs $(SET_PICTURES).cs $(LIST_TYPES).cs $(BATCH_SET).cs $(PARSE_PHOTO).cs $(STRIP_IMAGE).cs $(GENERATE_TEST_FIXTURE).cs \
 	$(srcdir)/covers/sample*
 
 DISTCLEANFILES = *.pidb
