Add conditional for running slow image comparisons.
Comparing huge files is slow. Therefor, we don't do that by default. If you
want to run the full tests, you'll need to pass the COMPARE_LARGE_IMAGES flag:

	make test COMPARE_LARGE_IMAGES=1

It's best to do this occasionally for sanity reasons, but you probably don't
want to do this every time you compile your code.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -72,7 +72,7 @@ TAGLIB_ASM = ../src/taglib-sharp.dll
 
 if ENABLE_TESTS
 test: $(ASSEMBLY) $(TAGLIB_ASM)
-	MONO_PATH="../src" $(NUNIT_CMD) -noshadow $(ASSEMBLY)
+	MONO_PATH="../src" COMPARE_LARGE_FILES="$(COMPARE_LARGE_FILES)" $(NUNIT_CMD) -noshadow $(ASSEMBLY)
 endif
 
 CLEANFILES = $(ASSEMBLY) TestResult.xml *.mdb *.dll *.exe
